tests/fail/void_in_condition.tc
void ping() {
  return;
}

int main() {
  if (ping()) {
    return 1;
  }
  return 0;
}
